qt/gen_qcombobox.nim

proc fcQComboBox_insertItem4(self: pointer, index: cint, icon: pointer, text: struct_miqt_string, userData: pointer): void {.importc: "QComboBox_insertItem4".}
proc fcQComboBox_setItemData3(self: pointer, index: cint, value: pointer, role: cint): void {.importc: "QComboBox_setItemData3".}
proc fQComboBox_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QComboBox_virtualbase_metacall".}
proc fcQComboBox_override_virtual_metacall(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_metacall".}
proc fQComboBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QComboBox_virtualbase_sizeHint".}
proc fcQComboBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_sizeHint".}
proc fQComboBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QComboBox_virtualbase_minimumSizeHint".}
proc fcQComboBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_minimumSizeHint".}
proc fQComboBox_virtualbase_showPopup(self: pointer, ): void{.importc: "QComboBox_virtualbase_showPopup".}
proc fcQComboBox_override_virtual_showPopup(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_showPopup".}
proc fQComboBox_virtualbase_hidePopup(self: pointer, ): void{.importc: "QComboBox_virtualbase_hidePopup".}
proc fcQComboBox_override_virtual_hidePopup(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_hidePopup".}
proc fQComboBox_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QComboBox_virtualbase_event".}
proc fcQComboBox_override_virtual_event(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_event".}
proc fQComboBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QComboBox_virtualbase_inputMethodQuery".}
proc fcQComboBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_inputMethodQuery".}
proc fQComboBox_virtualbase_focusInEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_focusInEvent".}
proc fcQComboBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_focusInEvent".}
proc fQComboBox_virtualbase_focusOutEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_focusOutEvent".}
proc fcQComboBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_focusOutEvent".}
proc fQComboBox_virtualbase_changeEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_changeEvent".}
proc fcQComboBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_changeEvent".}
proc fQComboBox_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_resizeEvent".}
proc fcQComboBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_resizeEvent".}
proc fQComboBox_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_paintEvent".}
proc fcQComboBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_paintEvent".}
proc fQComboBox_virtualbase_showEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_showEvent".}
proc fcQComboBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_showEvent".}
proc fQComboBox_virtualbase_hideEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_hideEvent".}
proc fcQComboBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_hideEvent".}
proc fQComboBox_virtualbase_mousePressEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_mousePressEvent".}
proc fcQComboBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_mousePressEvent".}
proc fQComboBox_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_mouseReleaseEvent".}
proc fcQComboBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_mouseReleaseEvent".}
proc fQComboBox_virtualbase_keyPressEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_keyPressEvent".}
proc fcQComboBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_keyPressEvent".}
proc fQComboBox_virtualbase_keyReleaseEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_keyReleaseEvent".}
proc fcQComboBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_keyReleaseEvent".}
proc fQComboBox_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_wheelEvent".}
proc fcQComboBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_wheelEvent".}
proc fQComboBox_virtualbase_contextMenuEvent(self: pointer, e: pointer): void{.importc: "QComboBox_virtualbase_contextMenuEvent".}
proc fcQComboBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_contextMenuEvent".}
proc fQComboBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QComboBox_virtualbase_inputMethodEvent".}
proc fcQComboBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_inputMethodEvent".}
proc fQComboBox_virtualbase_devType(self: pointer, ): cint{.importc: "QComboBox_virtualbase_devType".}
proc fcQComboBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_devType".}
proc fQComboBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QComboBox_virtualbase_setVisible".}
proc fcQComboBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_setVisible".}
proc fQComboBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QComboBox_virtualbase_heightForWidth".}
proc fcQComboBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_heightForWidth".}
proc fQComboBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QComboBox_virtualbase_hasHeightForWidth".}
proc fcQComboBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_hasHeightForWidth".}
proc fQComboBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QComboBox_virtualbase_paintEngine".}
proc fcQComboBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_paintEngine".}
proc fQComboBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_mouseDoubleClickEvent".}
proc fcQComboBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_mouseDoubleClickEvent".}
proc fQComboBox_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_mouseMoveEvent".}
proc fcQComboBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_mouseMoveEvent".}
proc fQComboBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_enterEvent".}
proc fcQComboBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_enterEvent".}
proc fQComboBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_leaveEvent".}
proc fcQComboBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_leaveEvent".}
proc fQComboBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_moveEvent".}
proc fcQComboBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_moveEvent".}
proc fQComboBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_closeEvent".}
proc fcQComboBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_closeEvent".}
proc fQComboBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_tabletEvent".}
proc fcQComboBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_tabletEvent".}
proc fQComboBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_actionEvent".}
proc fcQComboBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_actionEvent".}
proc fQComboBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_dragEnterEvent".}
proc fcQComboBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_dragEnterEvent".}
proc fQComboBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_dragMoveEvent".}
proc fcQComboBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_dragMoveEvent".}
proc fQComboBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_dragLeaveEvent".}
proc fcQComboBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_dragLeaveEvent".}
proc fQComboBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_dropEvent".}
proc fcQComboBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_dropEvent".}
proc fQComboBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QComboBox_virtualbase_nativeEvent".}
proc fcQComboBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_nativeEvent".}
proc fQComboBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QComboBox_virtualbase_metric".}
proc fcQComboBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_metric".}
proc fQComboBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QComboBox_virtualbase_initPainter".}
proc fcQComboBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_initPainter".}
proc fQComboBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QComboBox_virtualbase_redirected".}
proc fcQComboBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_redirected".}
proc fQComboBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QComboBox_virtualbase_sharedPainter".}
proc fcQComboBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_sharedPainter".}
proc fQComboBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QComboBox_virtualbase_focusNextPrevChild".}
proc fcQComboBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_focusNextPrevChild".}
proc fQComboBox_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QComboBox_virtualbase_eventFilter".}
proc fcQComboBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_eventFilter".}
proc fQComboBox_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QComboBox_virtualbase_timerEvent".}
proc fcQComboBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QComboBox_override_virtual_timerEvent".}
